--- a/ui/src/app/show-poll/show-poll.page.html
+++ b/ui/src/app/show-poll/show-poll.page.html
@@ -10,5 +10,9 @@
     <ion-item>
       <ion-label>{{ item.questionText }}</ion-label>
     </ion-item>
+    <ion-item>
+      <ion-input></ion-input>
+    </ion-item>
+
   </ion-list>
 </ion-content>
