--- a/ui/src/app/show-poll/show-poll.page.html
+++ b/ui/src/app/show-poll/show-poll.page.html
@@ -10,9 +10,24 @@
     <ion-item>
       <ion-label>{{ item.questionText }}</ion-label>
     </ion-item>
-    <ion-item>
-      <ion-input></ion-input>
-    </ion-item>
 
+    <div *ngIf= "item.questionType == 'text'">
+      <ion-item>
+        <ion-textarea placeholder="Enter anwser here..."></ion-textarea>
+      </ion-item>
+    </div>
+
+    <div *ngIf= "item.questionType == 'checkbox'">
+      <ion-list>
+        <ion-radio-group value= "item.questionId">
+          <ion-item *ngFor= "let entry of item.options">
+            <ion-label>{{entry}}</ion-label>
+            <ion-radio slot="start" value= {{entry}} ></ion-radio>
+          </ion-item>
+      </ion-radio-group>
+      </ion-list>
+    </div>
   </ion-list>
+
+  <ion-button (click) = "helloWorld()" >Send</ion-button>
 </ion-content>
