--- a/ui/src/app/create-poll/create-poll.page.html
+++ b/ui/src/app/create-poll/create-poll.page.html
@@ -5,5 +5,19 @@
 </ion-header>
 
 <ion-content>
+  <ion-item>
+    <ion-input [(ngModel)]="title" placeholder="Enter the title"></ion-input>
+  </ion-item>
+
+  <ion-list *ngFor="let item of this.questionList">
+    <ion-item>
+      <h1>Text Question</h1>
+    </ion-item>
+    <ion-item>
+      <ion-textarea [(ngModel)]="item.questionText" placeholder="Enter question here..."></ion-textarea>
+    </ion-item>
+  </ion-list>
+
+  <ion-button (click)="addQuestion()">Add a question</ion-button>
 
 </ion-content>
