Removed edit profile

--- a/ui/src/app/main/main.page.html
+++ b/ui/src/app/main/main.page.html
@@ -33,6 +33,8 @@
     <ion-item>{{this.id}}</ion-item>
   </ion-list>
 
+  <ion-button (click)="this.signOut()">Logout</ion-button>
+
   <!-- Animation -->
 
   
