--- a/ui/src/app/login/login.page.html
+++ b/ui/src/app/login/login.page.html
@@ -1,7 +1,7 @@
 
 <ion-content padding text-center>
     <div  class="form">
-        <img style="margin:auto;" src="assets/icon/ionic_firebase-logo.png" alt="">
+        <img style="margin:auto;" src="assets/icon/survey-time.png" alt="">
         <h4>Login
         </h4>
         <h3 class="goodfont">Survey Time!</h3>
