--- a/ui/src/app/register/register.page.html
+++ b/ui/src/app/register/register.page.html
@@ -1,10 +1,10 @@
 <ion-content padding text-center>
     
     <div  class="form">
-        <img style="margin:auto;" src="assets/icon/ionic_firebase-logo.png" alt="">
+        <img style="margin:auto;" src="assets/icon/survey-time.png" alt="">
         <h4>Register
         </h4>
-        <h3 class="goodfont">Ionic  Firestarter</h3>
+        <h3 class="goodfont">Survey Time!</h3>
         <ion-list>
             <ion-item>
                 <ion-input type="text" placeholder="Email" (keyup.enter)="moveFocus(b)" [(ngModel)]="email"></ion-input>
