Added integration with backend API

--- a/ui/src/app/create-group/create-group.page.html
+++ b/ui/src/app/create-group/create-group.page.html
@@ -6,7 +6,7 @@
 
 <ion-content padding>
   <ion-label>Enter group name:</ion-label>
-  <ion-input [(ngModel)] = "this.groupName"></ion-input>
+  <ion-input [(ngModel)]="this.groupName"></ion-input>
 </ion-content>
 
-<ion-button (click) = "createGroup()">Create Group</ion-button>
+<ion-button (click)="this.addGroup()">Create Group</ion-button>
