--- a/ui/src/app/main/main.page.html
+++ b/ui/src/app/main/main.page.html
@@ -1,7 +1,8 @@
 <ion-header no-border>
   <ion-toolbar no-border>
+    
       <ion-title>
-          Ionic 4 Firestart
+          Survey Time!
       </ion-title>
   <ion-buttons slot="start" >
       <ion-button [routerLink]="['/profile']" >
@@ -15,15 +16,15 @@
 
   <div class="form">
   
-    <ion-card color="" mode="ios">
 
       <ion-card-content *ngFor="let item of item">
-        <h1 class="goodfont">Welcome back {{item.payload.doc.data().name }} !</h1>
+
+        <h1 class="goodfont">Welcome back {{item.payload.doc.data().name}} {{item.payload.doc.data().surname}}!</h1>
       </ion-card-content>
-    </ion-card>
+  
     <br>
     <br>
-    <!-- Not working right now!!!  -->
+    
    
   </div>
 
@@ -36,7 +37,7 @@
   <ion-button (click)="this.createGroup()">Create group</ion-button>
   <ion-button (click)="this.signOut()">Logout</ion-button>
 
-  <!-- Animation -->
+
 
   
   
