--- a/ui/src/app/create-poll/create-poll.page.html
+++ b/ui/src/app/create-poll/create-poll.page.html
@@ -1,9 +1,42 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>create-poll</ion-title>
+    <ion-title>Creating a poll</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-<ion-button>Send Poll</ion-button>
+<ion-content>
+  <ion-item>
+    <ion-input [(ngModel)]="title" placeholder="Enter title" required=true></ion-input>
+  </ion-item>
+
+  <ion-list *ngFor="let item of this.questionList">
+    <ion-item>
+      <ion-label>Question type</ion-label>
+      <ion-select [(ngModel)]="item.questionType" value="TEXT">
+        <ion-select-option value="TEXT">Text question</ion-select-option>
+        <ion-select-option value="CHECKBOX">Checkbox</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-textarea [(ngModel)]="item.questionText" placeholder="Enter question here..." required=true></ion-textarea>
+      <ion-button (click)="removeQuestion(item)">Remove question</ion-button>
+    </ion-item>
+    
+    <div *ngIf= "item.questionType == 'CHECKBOX'">
+      <ion-list>
+          <ion-item *ngFor="let entry of item.options">
+            <ion-input [(ngModel)]="entry.answerText" placeholder="Enter the answer option" required=true></ion-input>
+            <ion-button (click)="removeAnswer(item.options, entry)">Remove anwser</ion-button>
+          </ion-item>
+      </ion-list>
+      <ion-button (click)="addAnswer(item, '')">Add an answer</ion-button>
+    </div>
+  
+  </ion-list>
+
+  <ion-button (click)="addTextQuestion()">Add text question</ion-button>
+  <ion-button (click)="addCheckboxQuestion()">Add checkbox question</ion-button>
+  <br>
+  <ion-button (click)="this.validateAndSend()">Send a poll</ion-button>
 </ion-content>
+
