--- a/ui/src/app/group/group.page.html
+++ b/ui/src/app/group/group.page.html
@@ -18,7 +18,7 @@
   </ion-list>
 
   <ion-label> Polls </ion-label><br>
-  <ion-list *ngFor="let poll of polls">
+  <ion-list (click)="onSelect(poll)" *ngFor="let poll of polls">
     <ion-item>{{poll.pollName}} {{poll.polDeadline}}</ion-item>
   </ion-list>
 
