notify specific user

--- a/ui/src/app/register/register.page.html
+++ b/ui/src/app/register/register.page.html
@@ -24,7 +24,7 @@
 
         </ion-list>
         <br>
-        <ion-button class="goodfont boton"  mode="ios" fill="solid" expand="block" color="primary" (click)="register()">Registrer</ion-button>
+        <ion-button class="goodfont boton"  mode="ios" fill="solid" expand="block" color="primary" (click)="register()">Register</ion-button>
         <br>
         <p class="register-text" (click)="goLogin()"> You have a account ?<a> Login</a> </p>
     </div>
