--- a/ui/src/app/edit-profile/edit-profile.page.html
+++ b/ui/src/app/edit-profile/edit-profile.page.html
@@ -12,21 +12,16 @@
   <div class="form">
   
   <div   text-center>
-   <img *ngIf="img && !urlImage" src="{{img}}" class="circle"> 
-    <img *ngIf="urlImage"  [src]="urlImage | async" class="circle" > 
+    <img style="margin:auto;" src="assets/icon/survey-time.png" alt="">
    
     <br>
     <br>
-    <img *ngIf="!urlImage && !img"  src="assets/user.svg" width="200px"> <br>
+ 
     </div>
 
 
   <div margin-bottom margin-top text-center>
-    <label class="custom-file-upload" style="margin:auto;max-width:400px">
-      <input id="file-upload" placeholder="Seleciona imagen" type="file" accept=".png, .jpg"
-        (change)="onUpload($event)" />
-      <ion-icon margin-right name="cloud-download"></ion-icon> Select profile photo
-    </label>
+   
   </div>
 
   <br>
@@ -54,7 +49,7 @@
 
 
 
-  <input #imageProd type="hidden" [value]="urlImage | async" style="color:black;">
+
   <br><br>
   
   </div>
