--- a/ui/src/app/profile/profile.page.html
+++ b/ui/src/app/profile/profile.page.html
@@ -23,8 +23,9 @@
    
     
     <div text-center>
+      <img style="margin:auto;" src="assets/icon/survey-time.png" alt="">
+      
 
-      <img text-center class="circle"  src="{{item[0].payload.doc.data().img}}" alt="">
     </div>
 
     <h2 class="goodfont" style="font-weight:bold;" text-center> @{{item[0].payload.doc.data().username}}</h2>
