--- a/ui/src/app/answer-poll/answer-poll.page.html
+++ b/ui/src/app/answer-poll/answer-poll.page.html
@@ -6,7 +6,7 @@
 
 <ion-content>
   <h1>HELLO</h1>
-  <ion-list *ngFor="let item of this.questions">
+  <ion-list *ngFor="let item of this.data.questions">
     <ion-item>
       <ion-label>{{ item.questionDetails.questionText }}</ion-label>
     </ion-item>
