--- a/ui/src/app/group/group.page.html
+++ b/ui/src/app/group/group.page.html
@@ -22,6 +22,8 @@
     <ion-item>{{poll.pollName}} {{poll.polDeadline}}</ion-item>
   </ion-list>
 
-  <ion-button (click)="manageGroup()">Manage Group</ion-button>
   <ion-button (click)="createPoll()">Create Poll</ion-button>
+  <ion-button (click)="createMessage()">Create Message</ion-button>
+  <ion-button (click)="manageGroup()">Manage Group</ion-button>
+  <ion-button (click)="checkStats()">Check Statistics</ion-button>
 </ion-content>
