--- a/ui/src/app/main/main.page.html
+++ b/ui/src/app/main/main.page.html
@@ -37,6 +37,11 @@
     <ion-item>{{ group.groupName }}</ion-item>
   </ion-list>
 
+  <h1 class="goodfont">Unanswered messages</h1>
+  <ion-list (click)="onMessage(message)"*ngFor="let message of this.unansweredMessages">
+    <ion-item>{{ message.context }}</ion-item>
+  </ion-list>
+
   <ion-button (click)="this.createGroup()">Create group</ion-button>
   <ion-button (click)="this.signOut()">Logout</ion-button>
 
