--- a/ui/src/app/create-message/create-message.page.html
+++ b/ui/src/app/create-message/create-message.page.html
@@ -10,4 +10,6 @@
   </ion-item>
   <br>
   <ion-button (click)="this.validateAndSend()">Send a Message</ion-button>
+  <br>
+  <ion-button (click)="this.goToGroupPage()">Go to group page</ion-button>
 </ion-content>
