--- a/ui/src/app/create-poll/create-poll.page.html
+++ b/ui/src/app/create-poll/create-poll.page.html
@@ -38,5 +38,7 @@
   <ion-button (click)="addCheckboxQuestion()">Add checkbox question</ion-button>
   <br>
   <ion-button (click)="this.validateAndSend()">Send a poll</ion-button>
+  <br>
+  <ion-button (click)="this.goToGroupPage()">Go to group page</ion-button>
 </ion-content>
 
