--- a/ui/src/app/group/group.page.html
+++ b/ui/src/app/group/group.page.html
@@ -26,4 +26,6 @@
   <ion-button (click)="createMessage()">Create Message</ion-button>
   <ion-button (click)="manageGroup()">Manage Group</ion-button>
   <ion-button (click)="checkStats()">Check Statistics</ion-button>
+  <br>
+  <ion-button (click)="goToMainPage()">Go To Main Page</ion-button>
 </ion-content>
