Improved view of poll-answer and poll-stats

--- a/ui/src/app/answer-poll/answer-poll.page.html
+++ b/ui/src/app/answer-poll/answer-poll.page.html
@@ -30,4 +30,6 @@
   </ion-list>
 
   <ion-button (click)="sendAnswers()">Send</ion-button>
+  <br>
+  <ion-button (click)="goToGroupPage()">Go To Group Page</ion-button>
 </ion-content>
