Added timeslots to stat page

--- a/ui/src/app/main/main.page.html
+++ b/ui/src/app/main/main.page.html
@@ -32,7 +32,7 @@
     <ion-item>{{ group.groupName }}</ion-item>
   </ion-list>
 
-  <h1 class="goodfont">Your member of</h1>
+  <h1 class="goodfont">You are member of</h1>
   <ion-list (click)="onSelect(group)" *ngFor="let group of this.memberGroups">
     <ion-item>{{ group.groupName }}</ion-item>
   </ion-list>
