--- a/ui/src/app/create-poll/create-poll.page.html
+++ b/ui/src/app/create-poll/create-poll.page.html
@@ -8,6 +8,10 @@
   <ion-item>
     <ion-input [(ngModel)]="title" placeholder="Enter title" required=true></ion-input>
   </ion-item>
+  <ion-item>
+    <ion-card-subtitle>Enter deadline</ion-card-subtitle>
+    <ion-datetime displayFormat="YYYY-MM-DD H:mm" [(ngModel)]="deadline"></ion-datetime>
+  </ion-item>
 
   <ion-list *ngFor="let item of this.questionList">
     <ion-label>Question type: {{item.questionType}}</ion-label>
